--- a/extension.toml
+++ b/extension.toml
@@ -1,10 +1,10 @@
-id = "hello-world-zed-extension"
-name = "Hello World Zed Extension"
+id = "zed-git-mcp"
+name = "Git MCP Server"
 version = "0.0.1"
 schema_version = 1
 authors = ["David Sillman <dsillman2000@gmail.com>"]
-description = "My cool extension"
-repository = "https://github.com/dsillman2000/hello-world-zed-extension"
+description = "A secure and scalable Git MCP server giving AI agents powerful version control for local environments."
+repository = "https://github.com/dsillman2000/zed-git-mcp"
 
-[context_servers.mcp-hello-world]
-name = "Hello World MCP Server"
+[context_servers.git-mcp-server]
+name = "Git MCP server"
